--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.24.2",
     "drizzle-orm": "^0.33.0",
+    "ffmpeg-static": "^5.2.0",
     "file-type": "^19.4.1",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
